--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-parallax": "^1.4.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
+    "react-tooltip": "^3.4.0",
     "styled-components": "^2.2.1"
   },
   "scripts": {
